--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "start":"node index.js"
-  "name": "temur-aka",
+  "name": "youtube_dowload_weeb_ilova",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
