--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "youtube_dowload_weeb_ilova",
+  "name": "temur-aka",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
